--- a/.config/config.json5
+++ b/.config/config.json5
@@ -1,9 +1,7 @@
 {
   "keybindings": {
-    "Home": {
-      "<q>": "Quit", // Quit the application
-      "<Ctrl-d>": "Quit", // Another way to quit
-      "<Ctrl-c>": "Quit", // Yet another way to quit
+    "EditQuery": {
+      "<Ctrl-c>": "Quit", // Quit the application
       "<Ctrl-z>": "Suspend" // Suspend the application
     },
   }
