--- a/.config/config.json5
+++ b/.config/config.json5
@@ -2,7 +2,13 @@
   "keybindings": {
     "EditQuery": {
       "<Ctrl-c>": "Quit", // Quit the application
-      "<Ctrl-z>": "Suspend" // Suspend the application
+      "<Ctrl-z>": "Suspend", // Suspend the application
     },
+    "ExploreResults": {
+      "j": "NavDown",
+      "k": "NavUp",
+      "h": "NavLeft",
+      "l": "NavRight"
+    }
   }
 }
