--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ repository = "https://github.com/mattcramblett/lazydb"
 
 [dependencies]
 better-panic = "0.3.0"
+chrono = "0.4.42"
+sqlparser = "0.60.0"
 clap = { version = "4.5.20", features = [
     "derive",
     "cargo",
@@ -36,6 +38,7 @@ signal-hook = "0.3.17"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
 tokio-util = "0.7.12"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
