introduce AppEvent for asynchronous system-level events, use for db connection

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -7,7 +7,7 @@
       "j": "NavDown",
       "up": "NavUp",
       "down": "NavDown",
-      "enter": "SelectConnection",
+      "enter": "MakeSelection",
     },
     "EditQuery": {
       "<Ctrl-c>": "Quit", // Quit the application
