add mode, keymaps, and focusing

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -24,6 +24,15 @@
       "down": "NavDown",
       "left": "NavLeft",
       "right": "NavRight",
+    },
+    "ExploreTables": {
+      "<Ctrl-c>": "Quit",
+      "<Ctrl-z>": "Suspend",
+      "k": "NavUp",
+      "j": "NavDown",
+      "up": "NavUp",
+      "down": "NavDown",
+      "enter": "MakeSelection",
     }
   }
 }
