auto-select 1000 rows from table on keymap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.7.0"
+regex = "1.12.2"
 
 [build-dependencies]
 anyhow = "1.0.90"
