add ability to copy table names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.7.0"
 regex = "1.12.2"
+arboard = "3.6.1"
 
 [build-dependencies]
 anyhow = "1.0.90"
