add yank support for rows

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -24,6 +24,7 @@
       "down": "NavDown",
       "left": "NavLeft",
       "right": "NavRight",
+      "y": "Yank",
     },
     "ExploreTables": {
       "<Ctrl-c>": "Quit",
