add search/filter for table list

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -35,6 +35,8 @@
       "down": "NavDown",
       "enter": "MakeSelection",
       "y": "Yank",
+      "/": "Search",
+      "esc": "Clear",
     }
   }
 }
