--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.7.0"
 regex = "1.12.2"
 arboard = "3.6.1"
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
 
 [build-dependencies]
 anyhow = "1.0.90"
