--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,6 @@ signal-hook = "0.3.17"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["full"] }
-tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
 tokio-util = "0.7.12"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
@@ -46,7 +45,9 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.7.0"
 regex = "1.12.2"
 arboard = "3.6.1"
-sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "json", "bigdecimal"] }
+bigdecimal = "0.4.10"
+hex = "0.4.3"
 
 [build-dependencies]
 anyhow = "1.0.90"
