--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.7.0"
 regex = "1.12.2"
 arboard = "3.6.1"
-sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "json", "uuid", "bigdecimal", "time"] }
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "json", "uuid", "bigdecimal", "time"] }
 bigdecimal = "0.4.10"
 hex = "0.4.3"
 uuid = { version = "1.19.0", features = ["serde", "v4"] }
